tests/baselines/reference/exportImplementsModuleErrors1.errors.txt
tests/cases/conformance/externalModules/exportImplementsModuleErrors1.ts(7,1): error TS2673: Module 'typeof "tests/cases/conformance/externalModules/exportImplementsModuleErrors1"' incorrectly implements interface 'Foo'
  Types of property 'y' are incompatible.
    Type 'number' is not assignable to type 'string'.


==== tests/cases/conformance/externalModules/exportImplementsModuleErrors1.ts (1 errors) ====
    
    interface Foo {
      x: number;
      y: string;
    }
    
    export implements Foo;
    ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2673: Module 'typeof "tests/cases/conformance/externalModules/exportImplementsModuleErrors1"' incorrectly implements interface 'Foo'
!!! error TS2673:   Types of property 'y' are incompatible.
!!! error TS2673:     Type 'number' is not assignable to type 'string'.
    export var x: number;
    export var y: number;
    
    